<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hungrie</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="logOutButton">LogOutButton</string>
    <string name="bLogOut">Log Out</string>
    <string name="title_activity_restaurant">RestaurantActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_menu_item">MenuItemActivity</string>
    <string name="action_settings">Settings</string>
    <string name="btBrowseAllRestaurants">Show all restaurants</string>
    <string name="btBrowseRestaurantsNearby">Show restaurants nearby</string>
    <string name="Order">Order</string>
    <string name="SignUp"><u>Sign Up for Hungrie!</u></string>
    
    
    <string-array name="numbers">
	<item>1</item>
	<item>2</item>
	<item>3</item>
	<item>4</item>
	<item>5</item>
	<item>6</item>
	<item>7</item>
	<item>8</item>
	<item>9</item>
	</string-array>

    <color name="yellow">#FF2211</color>
    <color name="hungrieGreen">#3F9C33</color>
    <string name="log_in">Log in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="logo">logo</string>
    <string name="waiting_confirmation">Waiting confirmation</string>
    <string name="order_status_">Order status:</string>
    <string name="repeat_password">Repeat password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="sign_up">Sign Up</string>

</resources>
